<pre>
2007-05-02:
	* version ???
	* added :tabonly and :tabrewind and :tablast commands and some futher aliases :tabNext, etc. (by Doug Kearns)
	* added vimparator.vim for .vimperatorrc syntax highlighting in the XPI (by Doug Kearns)
	* Added keyword support for bookmarks to the :[tab]open commands
	* many small bug fixes

2007-05-02:
	* version 0.4.1
	* Fixed bug that :open google.com/mail opened ".com/mail" in google search
	* made <tab> <up> <down> etc. perform the default action, so menus kinda
	work, and it doesn't beep anymore on tab.
	* added 'defsearch' setting for setting default search engine

2007-05-01:
	* version 0.4
	* extension GUID was changed to 'vimperator@mozdev.net' -> YOU WILL HAVE
	  TO UNINSTALL ANY OLD VIMPERATOR INSTALLATION BEFORE INSTALLING THIS VERSION
	* support for internal search engines was dropped. Now we use Firefox search engines
	* support for 'wildmode' completion setting with support for matching the
	  longest common substring. Also new 'wildoptions' setting
	* added 'f' to the 'complete' option to allow listing of filenames in :open prompt
	* changed regexp search to normal text search for completion -> massive speedup, but limited functionality
	* support for :open ./ , :open .. and :open ... (patch from Lee Hinman)
	  'gu' and <BackSpace> goes up a directory component, gU and <C-BackSpace> to the root directory 
	* Esc now doesn't stop loading the webpage, use Ctrl-c instead, :stop command added
	* changed hinttags to work with dict.leo.org and hintstyle to work with digg.com
	* :back! goes to beginning of history now
	* diabled firefox 3.0 support for now, as there are just too many small
	  bugs
	* new Makefile instead of build.sh (only important for developers)
	* newly designed help page
	* :help section supported, :help :set will show help for the :set command
	  (patch from Viktor Kojouharov)
	* :source support, and auto-sourcing ~/.vimperatorrc on startup