@@ -1,6 +1,9 @@
 <pre>
 2007-05-02:
 	* version ???
+	* hints work on xhtml pages now (you need to reset the 'hinttags' and
+	  'extendedhinttags' settings with :set hinttags& and :set extendedhinttags&
+	* :set option& resets the option to the default value
 	* added :tabonly and :tabrewind and :tablast commands and some futher aliases :tabNext, etc. (by Doug Kearns)
 	* added vimparator.vim for .vimperatorrc syntax highlighting in the XPI (by Doug Kearns)
 	* Added keyword support for bookmarks to the :[tab]open commands
